bugfix audio not showing in chrome

--- a/src/components/Definitions/Definitions.css
+++ b/src/components/Definitions/Definitions.css
@@ -1,6 +1,6 @@
 .meanings {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   overflow-y: scroll;
   scrollbar-width: thin;
   height: 55vh;
